2006-07-17  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmsetup.c:  Fix for bug causing gdmsetup to have
          performance issues starting up.  Fixes bug #345118.
          Patch by Ray Strode <rstrode@redhat.com>.

2006-06-30  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.c: Fix timed login message so it works
	  when TimedLogin is set to use a piped script.
	* gui/gdmwm.c: Make comment nicer.

2006-06-25  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Fix decoding of suspend message in the daemon
	  so the suspend command works.  Fixes bug #345829.  Patch
	  provided by Philippe Troin <phil@fifi.org>.

2006-06-19  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmsetup.c: Fix bug that causes gdmsetup to not fail properly
          when there is no custom config file.

2006-06-16  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_action_language.c,
	  gui/greeter/greeter_session.c, gui/greeter/greeter_system.c:
	  Make sure focus is returned to entry after dialogs are launched
	  from the options button.

2006-06-16  Brian Cameron  <brian.cameron@sun.com>

	* pixmaps/nobody.png: Updated so it uses official GNOME logo.
	  Fixes bug #343571.  Image provided by Diana Fong
	  <dfong@redhat.com>.

2006-06-16  Brian Cameron  <brian.cameron@sun.com>

	* pixmaps/nohost.png: Updated so it uses official GNOME logo.
	  Fixes bug #343571.  Image provided by Diana Fong
	  <dfong@redhat.com>.

2006-06-12  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.9: 
	* NEWS: Updated.
	* configure.ac: Update to new release version.

2006-06-09  Brian Cameron  <brian.cameron@sun.com>

	* daemon/verify-pam.c: Fix autologin Pam service name.  Fixes bug
	  #344191.
	* daemon/gdmconfig.c, gui/gdmconfig.c, gui/gdmdynamic.c, 
	  gui/gdmsetup.c, gui/greeter/greeter.c, 
	  gui/greeter/greeter_canvas_item.c, gui/greeter/greeter_geometry.c
	  gui/greeter/greeter_item_pam.c, gui/greeter/greeter_parser.c,