@@ -1,3 +1,10 @@
+2006-07-18  Brian Cameron  <brian.cameron@sun.com>
+
+	* gui/gdmlogin.c, gui/gdmsession.[ch], gui/greeter/greeter.c,
+	  gui/greeter/greeter_session.[ch]: Fix for bug #341619.  Now
+	  GDM does not save the Failsafe GNOME or Xterm session as the
+	  user's default.
+
 2006-07-17  Brian Cameron  <brian.cameron@sun.com>
 
         * gui/gdmsetup.c:  Fix for bug causing gdmsetup to have
